--- a/counterexample to bratman on shared intention/a counterexample to bratman on shared intention.tex
+++ b/counterexample to bratman on shared intention/a counterexample to bratman on shared intention.tex
@@ -83,14 +83,14 @@ In \citet{Bratman:1992mi}, the following were offered as jointly sufficient \tex
 \end{quote}
 %
 How could we show that our meeting these conditions is not in fact sufficient for us to have a shared intention? 
-We seek a case where the conditions are met but we lack a shared intention.
-But, in advance of deciding whether Bratman's account is right, how could we determine whether we have a shared intention?
+We seek a case where the conditions are met although we lack a shared intention.
+But how could we determine whether we have a shared intention in advance of deciding whether Bratman's account is right?
 As already mentioned, an appeal to shared intention is supposed to  characterise systematically a difference between two agents who intentionally J together (e.g.\ walk  together) and two agents who also  J together but do not do so intentionally (e.g.\ they happen to be walking side by side). 
 Let's stipulate that two cases \emph{differ with respect to shared agency} when they differ in the way exemplified by the contrast between our intentionally walking together and our merely walking in parallel.
 Suppose, then, that we construct three cases, A, B and C.
 The three cases are as similar as possible, except that the above conditions are met in cases B and C but not in case A.
 Now if Bratman's conditions are sufficient for shared intention, A should differ from B with respect to shared agency, and B should not differ from C with respect to shared agency.
-But suppose that in fact A does not differ from B with respect to shared agency, but B does so differ from C.%
+But suppose that in fact A does not differ from B with respect to shared agency, whereas B does so differ from C.%
 \footnote{
 Strictly speaking only A and B are needed for the counterexample, of course.
 But including C makes it clearer that A and B do not differ with respect to shared agency.
@@ -284,22 +284,53 @@ Yasmin and Zak meet Bratman's conditions (1)--(3) for having a shared intention 
 But these intentions, the unshared intention and the Bratman intention (as we might label the structure of intention and knowledge while leaving open whether it constitutes a shared intention), result in them performing same actions in the same way.
 That is, Yasmin reasons about Zak much as Ayesha reasons about Benji and Yasmin and does what Ayesha does, and likewise for Zak and Benji. 
 
-We shall argue that Yasmin and Zak do not have a shared intention that they J$_1$ despite meeting meet Bratman's conditions (1)--(3).
-This is probably not yet obvious, however.
-Let us first attempt to provide some intuitive support for this claim.
-Return to Ayesha and Benji for a moment.
+
+We claim that Yasmin and Zak have a shared intention that they J$_1$
+only if 
+Ayesha and Benji have a shared intention. 
+This claim follows from the similarities of the two cases.
+The only difference is that Yasmin and Zak happen to be assigned the same task, whereas Ayesha and Beatrice are not.
+But neither Yasmin nor Zak considers the fact that they have the same task to be important.
+
+Let us pause to emphasise some ways in which the case of Yasmin and Zak is relevantly similar to that of  Ayesha and Benji. 
 Ayesha sees Benji's actions as constraints to work around and opportunities to exploit.
 She exploits Benji's intentions for her own ends.
 Of course the situation is reciprocal: Benji exploits Ayesha in equal measure.
 Each allows himself or herself to be exploited by the other because being exploited enables exploiting.
-The sort of shared agency that an account of shared intention is supposed to capture must involve more than this sort of reciprocal exploitation, where each agent merely exploits the other's intentions. 
 But Yasmin and Zak are engaged in just the same sort of reciprocal exploitation as Ayesha and Benji.
 The only difference is that, quite by chance, Yasmin's task and Zak's task are the same.
-So, intuitively, Yasmin and Zak, like Ayesha and Benji, belong in the same category as two people who happen to be walking side by side and not in the category exemplified by two people intentionally walking together.
+So if we focus on how  
+		the case of Yasmin and Zak
+	differs from
+		 that of Ayesha and Benji,
+we can see that these differences do not plausibly amount to a difference with respect to shared agency.
 
+At this point it may be tempting to assume that Ayesha and Benji do not have a shared intention. 
+We might assume this on the grounds that
+ the sort of shared agency that an account of shared intention is supposed to capture must involve more than this sort of reciprocal exploitation, where each agent sees the other's actions only as constraints or opportunities. 
+And given that Ayesha and Benji do not have a shared intention,
+	we could  infer that neither do Yasmin and Zak.
+This would give us the required counterexample.
+For, as already noted, Yasmin and Zak do meet the conditions Bratman claims are sufficient for shared intention.
+
+We must be careful here, however.
+The best reply to our counterexample in defence of Bratman's account probably involves claiming that Ayesha and Benji have a shared intention rather than denying that their case differs from that of Yasmin and Zak in ways relevant for shared agency.
+So we must ask, 
+Could Ayesha and Benji's unshared intention that they <J$_1$, J$_2$> be a  shared intention?
+This question might initially appear frivolous but it is not straightforward to answer.
+Since Bratman provides only sufficient conditions for shared intention, his account doesn't tell us that the unshared intention is not a shared intention.
+And while we might be tempted to assume that for two agents to intentionally J together they must at least each have intentions concerning J, 
+this assumption might reasonably be rejected by those who, like Bratman, reject the Simple View according to which when an individual intentionally J-s she has an intention concerning her J-ing \citep{Bratman:1984jr}.
+
+***Simple point: the fact that we have the same task should play a role in our planning.  It is something that we should embrace, and perhaps even want.  (Be careful: two people might intentionally act together although each would prefer to act alone, and would seize the opportunity to do so.)  Cordula's idea (modified) was that we aim for shared success (it's not a question of whether I care about \\emph{your} success, but I must care about \emph{our} success).
+
+
+
+\section{***OLD}
 Assuming for a moment that this is right,
 what might explain the difference between Yasmin and Zak on the one hand and cases like Gilbert's two people intentionally walking together on the other hand?
 To answer this question in the spirit of Bratman's planning-theoretic approach, we need to step back and think about planning generally.
+
 
 Imagine observing Ayesha and Benji as they play the game. 
 Suppose you decide to make a plan of action for one or both of them.
